# FFMPEGWorker

./: .gitignore  ADAPTIVE_GPU_SUMMARY_FR.md  CHANGELOG_v0.19.0.md  CHANGELOG_v1.0.1.md  Dockerfile  GPU_ADAPTIVE_CONFIG.md  GPU_PIPELINE_FALLBACK_FIX.md  GPU_TUNING_GUIDE.md  OPTIMIZATIONS_SUMMARY_FR.md  OPTIMIZATION_REPORT.md  README.md  RUNPOD_GPU_ERROR_FIX.md  benchmark_gpu.py  docker-bake.hcl  docker-compose.yml  pyproject.toml  rebuild_and_push.sh  requirements.txt  test_watermark.py
.github/workflows/: publish.yml
app/: __init__.py  dependencies.py  events.py  main.py
app/api/: router.py
app/api/routes/: health.py  jobs.py
app/core/: config.py  logging.py
app/models/: __init__.py
app/schemas/: __init__.py  job.py
app/serverless/: __init__.py  runpod_handler.py
app/services/: job_registry.py  job_service.py  watermark_removal_service.py
app/utils/: ffmpeg.py  s3_uploader.py
app/workers/: base.py  video_worker.py
data/: jobs_store.json
scripts/: diagnose_gpu_pipeline.sh  run_worker.py
tests/: test_health.py
